fixing jumping menus on new indi page, fixing missing relationship chart
git-svn-id: svn://svn.webtrees.net/branches/phpGedView-ca@6110 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/themes/standard/style.css
+++ b/themes/standard/style.css
@@ -432,6 +432,11 @@ a:hover .nameZoom {
 	height: 50px;
 }
 
+.menuitem_hover .icon {
+	width: 50px;
+	height: 50px;
+}
+
 .submenu .icon {
 	width: 25px;
 	height: 25px;
